Remade with the new multi-client version of tcp-listener
Now multiple clients at a time can enjoy these pieces of wisdom!

--- a/QotDServer.vcxproj
+++ b/QotDServer.vcxproj
@@ -93,6 +93,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(ProjectDir)include;$(ProjectDir)src;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -122,6 +123,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(ProjectDir)include;$(ProjectDir)src;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -143,10 +145,12 @@
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\QotD.cpp" />
+    <ClCompile Include="src\QotDServer.cpp" />
     <ClCompile Include="src\TcpListener.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\QotD.h" />
+    <ClInclude Include="include\QotDServer.h" />
     <ClInclude Include="include\TcpListener.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
